<resources>
    <string name="app_name">My Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">Hello!</string>
    <string name="greeting_message">What do you want to buy?</string>
    <string name="choose_category_label">Choose Category</string>
    <string name="rating_dummy">4.8</string>
    <string name="count_rating">(%s Reviews)</string>
    <string name="format_price">$%s</string>
    <string name="banner_url">https://img.freepik.com/premium-vector/final-offer-banner-with-super-sale-retail-discount_419341-1123.jpg?w=1380</string>
    <string name="description_label">Description</string>
    <string name="price">Price</string>
    <string name="details">Details</string>
    <string name="share">Share</string>
    <string name="fullname">Muhammad Rizqan Fadhil</string>
    <string name="email">fadhiill2719@gmail.com</string>
</resources>