<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/extra_small_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,MissingConstraints"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_product_name"
            style="@style/CustomFontTextViewSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid_small_margin"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_product"
            tools:text="@tools:sample/lorem" />

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="@dimen/small_margin"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_name"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/CustomFontTextViewMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/rating_dummy"
            android:textColor="@color/md_theme_secondary"
            android:textSize="@dimen/text_mid_small"
            app:layout_constraintBottom_toBottomOf="@+id/iv_star"
            app:layout_constraintStart_toEndOf="@+id/iv_star"
            app:layout_constraintTop_toTopOf="@+id/iv_star" />

        <TextView
            android:id="@+id/tv_count_rating"
            style="@style/CustomFontTextViewMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_small_margin"
            android:text="@string/count_rating"
            android:textColor="@color/md_theme_secondary"
            android:textSize="@dimen/text_mid_small"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
            app:layout_constraintStart_toEndOf="@+id/tv_rating"
            app:layout_constraintTop_toTopOf="@+id/tv_rating" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/CustomFontTextViewSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid_small_margin"
            android:layout_marginBottom="@dimen/extra_small_margin"
            android:text="@string/format_price"
            android:textSize="@dimen/text_heading_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_star" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>