<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeDetailFragment">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/small_margin"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cl_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_product"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription"
                        tools:src="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_product_name"
                    style="@style/CustomFontTextViewSemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="@dimen/text_xlarge"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_category"
                    tools:text="@tools:sample/lorem" />

                <TextView
                    android:id="@+id/tv_price"
                    style="@style/CustomFontTextViewSemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small_margin"
                    android:text="@string/format_price"
                    android:textColor="@color/md_theme_primary"
                    android:textSize="@dimen/text_xlarge"
                    app:layout_constraintStart_toStartOf="@+id/tv_product_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

                <TextView
                    android:id="@+id/tv_category"
                    style="@style/CustomFontTextViewMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/regular_margin"
                    android:background="@drawable/bg_round_5_primary_container"
                    android:paddingHorizontal="@dimen/small_margin"
                    android:paddingVertical="@dimen/extra_small_margin"
                    android:textColor="@color/md_theme_secondary"
                    android:textSize="@dimen/text_mid_small"
                    app:layout_constraintStart_toStartOf="@+id/tv_product_name"
                    app:layout_constraintTop_toBottomOf="@+id/cl_product"
                    tools:text="@tools:sample/lorem" />

                <ImageView
                    android:id="@+id/iv_star"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="@dimen/small_margin"
                    android:src="@drawable/ic_star"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_category"
                    app:layout_constraintStart_toEndOf="@+id/tv_category"
                    app:layout_constraintTop_toTopOf="@+id/tv_category"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_rating"
                    style="@style/CustomFontTextViewMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:text="@string/rating_dummy"
                    android:textColor="@color/md_theme_secondary"
                    android:textSize="@dimen/text_mid_small"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_star"
                    app:layout_constraintStart_toEndOf="@+id/iv_star"
                    app:layout_constraintTop_toTopOf="@+id/iv_star" />

                <TextView
                    android:id="@+id/tv_count_rating"
                    style="@style/CustomFontTextViewMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/extra_small_margin"
                    android:text="@string/count_rating"
                    android:textColor="@color/md_theme_secondary"
                    android:textSize="@dimen/text_mid_small"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
                    app:layout_constraintStart_toEndOf="@+id/tv_rating"
                    app:layout_constraintTop_toTopOf="@+id/tv_rating" />


                <TextView
                    android:id="@+id/tv_description"
                    style="@style/CustomFontTextViewMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_margin"
                    android:layout_marginTop="@dimen/regular_margin"
                    android:textColor="@color/md_theme_secondary"
                    android:textSize="@dimen/text_mid_small"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_price"
                    tools:text="@tools:sample/lorem/random" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/md_theme_primary"
        android:indeterminateTintMode="src_atop"
        android:overScrollMode="never"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>